@@ -37,12 +37,17 @@ print_setup_tabs('mail', $is_enterprise);
 $update = (bool) get_parameter ("update");
 
 $pending_ok = (bool) get_parameter ("pending_ok");
+$pending_delete = (bool) get_parameter ("pending_delete");
 
 if ($pending_ok){
 	echo "<h3 class='suc'>".__('Mail queue refreshed')."</h3>";
 	process_sql ("UPDATE tpending_mail SET attempts = 0, status = 0 WHERE status = 1");
 }
 
+if ($pending_delete){
+	echo "<h3 class='suc'>".__('Mail queue deleted')."</h3>";
+        process_sql ("DELETE FROM tpending_mail");
+}
 
 if ($update) {
 	$config["notification_period"] = (int) get_parameter ("notification_period", 86400);
